@@ -22,11 +22,13 @@ import java.io.IOException;
 import java.net.MalformedURLException;
 import java.net.URL;
 import java.nio.file.Files;
+import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.Optional;
 import java.util.Set;
 
 import org.apache.commons.io.FileUtils;
+import org.junit.After;
 import org.junit.Assert;
 import org.junit.Before;
 import org.junit.Test;
@@ -35,7 +37,6 @@ import org.springframework.http.MediaType;
 
 import com.google.common.collect.Maps;
 import com.google.common.collect.Sets;
-
 import fr.cnes.regards.framework.modules.plugins.domain.parameter.IPluginParam;
 import fr.cnes.regards.framework.utils.plugins.PluginUtils;
 import fr.cnes.regards.framework.utils.plugins.exception.NotAvailablePluginConfigurationException;
@@ -55,18 +56,19 @@ import fr.cnes.regards.modules.storagelight.domain.plugin.IStorageProgressManage
  */
 public class LocalDataStorageTest {
 
-    private LocalDataStorage plugin;
-
     private final IStorageProgressManager storageProgress = Mockito.mock(IStorageProgressManager.class);
 
     private final IDeletionProgressManager deletionProgress = Mockito.mock(IDeletionProgressManager.class);
+
+    private LocalDataStorage plugin;
+
+    private String baseStorageLocation = "target/local-storage";
 
     @Before
     public void init() throws NotAvailablePluginConfigurationException, IOException {
         PluginUtils.setup();
         Set<IPluginParam> params = Sets.newHashSet();
-        params.add(IPluginParam.build(LocalDataStorage.BASE_STORAGE_LOCATION_PLUGIN_PARAM_NAME,
-                                      "target/local-storage"));
+        params.add(IPluginParam.build(LocalDataStorage.BASE_STORAGE_LOCATION_PLUGIN_PARAM_NAME, baseStorageLocation));
         params.add(IPluginParam.build(LocalDataStorage.LOCAL_STORAGE_DELETE_OPTION, true));
         params.add(IPluginParam.build(LocalDataStorage.LOCAL_STORAGE_TOTAL_SPACE, 10_000_000L));
         plugin = PluginUtils.getPlugin(params, LocalDataStorage.class, Maps.newHashMap());
@@ -83,48 +85,76 @@ public class LocalDataStorageTest {
         }
     }
 
+    @After
+    public void after() throws IOException {
+        Files.walk(Paths.get(baseStorageLocation)).forEach(p -> p.toFile().delete());
+    }
+
     @Test
-    public void store() throws MalformedURLException {
+    public void store() throws IOException {
         Set<FileStorageRequest> files = Sets.newHashSet();
+        Path testFilePath = Paths.get("src", "test", "resources", "file.test");
         FileStorageRequest storageRequest = new FileStorageRequest("owner",
-                new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c", "MD5", "file.name", null,
-                        MediaType.APPLICATION_OCTET_STREAM),
-                new URL("file", null, "src/test/resources/file.test").toString(), "localStorage", Optional.empty(),
-                "group");
+                                                                   new FileReferenceMetaInfo(
+                                                                           "edc900745c5d15d773fbcdc0b376f00c",
+                                                                           "MD5",
+                                                                           "file.name",
+                                                                           testFilePath.toFile().length(),
+                                                                           MediaType.APPLICATION_OCTET_STREAM),
+                                                                   testFilePath.toUri().toURL(),
+                                                                   "localStorage",
+                                                                   Optional.empty(),
+                                                                   "group");
 
         files.add(storageRequest);
         FileStorageWorkingSubset ws = new FileStorageWorkingSubset(files);
         Mockito.verify(storageProgress, Mockito.never()).storageSucceed(Mockito.any(), Mockito.any(), Mockito.any());
         plugin.store(ws, storageProgress);
-        Mockito.verify(storageProgress, Mockito.times(1)).storageSucceed(Mockito.eq(storageRequest), Mockito.any(),
-                                                                         Mockito.any());
+        Mockito.verify(storageProgress, Mockito.times(1))
+                .storageSucceed(Mockito.eq(storageRequest), Mockito.any(), Mockito.any());
+        Assert.assertTrue("", Files.exists(plugin.getStorageLocationForZip(storageRequest)));
     }
 
     @Test
     public void store_file_exists() throws IOException {
         Set<FileStorageRequest> files = Sets.newHashSet();
+        Path testFilePath = Paths.get("src", "test", "resources", "file.test");
         FileStorageRequest storageRequest = new FileStorageRequest("owner",
-                new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c", "MD5", "file.name", null,
-                        MediaType.APPLICATION_OCTET_STREAM),
-                new URL("file", null, "src/test/resources/file.test").toString(), "localStorage", Optional.empty(),
-                "group");
+                                                                   new FileReferenceMetaInfo(
+                                                                           "edc900745c5d15d773fbcdc0b376f00c",
+                                                                           "MD5",
+                                                                           "file.name",
+                                                                           9L,
+                                                                           MediaType.APPLICATION_OCTET_STREAM),
+                                                                   testFilePath.toUri().toURL(),
+                                                                   "localStorage",
+                                                                   Optional.empty(),
+                                                                   "group");
         files.add(storageRequest);
-        Files.copy(Paths.get("src/test/resources/file.test"),
-                   Paths.get(plugin.getStorageLocation(files.iterator().next())));
+        // rather than mimicking the storage logic, lets just ask for storage and then try it again
+        store();
         FileStorageWorkingSubset ws = new FileStorageWorkingSubset(files);
-        Mockito.verify(storageProgress, Mockito.never()).storageSucceed(Mockito.any(), Mockito.any(), Mockito.any());
-        plugin.store(ws, storageProgress);
+        // from the store tests
         Mockito.verify(storageProgress, Mockito.times(1)).storageSucceed(Mockito.any(), Mockito.any(), Mockito.any());
+        plugin.store(ws, storageProgress);
+        Mockito.verify(storageProgress, Mockito.times(2)).storageSucceed(Mockito.any(), Mockito.any(), Mockito.any());
     }
 
     @Test
     public void store_error_missing_file() throws MalformedURLException {
         Set<FileStorageRequest> files = Sets.newHashSet();
+        Path unknownFilePath = Paths.get("src", "test", "resources", "unknown.test");
         FileStorageRequest storageRequest = new FileStorageRequest("owner",
-                new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c", "MD5", "file.name", null,
-                        MediaType.APPLICATION_OCTET_STREAM),
-                new URL("file", null, "src/test/resources/unknown.test").toString(), "localStorage", Optional.empty(),
-                "group");
+                                                                   new FileReferenceMetaInfo(
+                                                                           "edc900745c5d15d773fbcdc0b376f00c",
+                                                                           "MD5",
+                                                                           "unknown.test",
+                                                                           9877L,
+                                                                           MediaType.APPLICATION_OCTET_STREAM),
+                                                                   unknownFilePath.toUri().toURL(),
+                                                                   "localStorage",
+                                                                   Optional.empty(),
+                                                                   "group");
         files.add(storageRequest);
         FileStorageWorkingSubset ws = new FileStorageWorkingSubset(files);
         Mockito.verify(storageProgress, Mockito.never()).storageSucceed(Mockito.any(), Mockito.any(), Mockito.any());
@@ -137,10 +167,18 @@ public class LocalDataStorageTest {
     public void store_error_invalid_md5() throws MalformedURLException {
         Set<FileStorageRequest> files = Sets.newHashSet();
         FileStorageRequest storageRequest = new FileStorageRequest("owner",
-                new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f10c", "MD5", "file.name", null,
-                        MediaType.APPLICATION_OCTET_STREAM),
-                new URL("file", null, "src/test/resources/file.test").toString(), "localStorage", Optional.empty(),
-                "group");
+                                                                   new FileReferenceMetaInfo(
+                                                                           "abcde123456789abcde123456789abcd",
+                                                                           "MD5",
+                                                                           "file.name",
+                                                                           9L,
+                                                                           MediaType.APPLICATION_OCTET_STREAM),
+                                                                   new URL("file",
+                                                                           null,
+                                                                           "src/test/resources/file.test"),
+                                                                   "localStorage",
+                                                                   Optional.empty(),
+                                                                   "group");
         files.add(storageRequest);
         FileStorageWorkingSubset ws = new FileStorageWorkingSubset(files);
         Mockito.verify(storageProgress, Mockito.never()).storageSucceed(Mockito.any(), Mockito.any(), Mockito.any());
@@ -150,12 +188,119 @@ public class LocalDataStorageTest {
     }
 
     @Test
+    public void deleteFromZipAndZip() throws IOException {
+        store();
+        Path testFilePath = Paths.get("src", "test", "resources", "file.test");
+        FileStorageRequest storageRequest = new FileStorageRequest("owner",
+                                                                   new FileReferenceMetaInfo(
+                                                                           "edc900745c5d15d773fbcdc0b376f00c",
+                                                                           "MD5",
+                                                                           "file.name",
+                                                                           testFilePath.toFile().length(),
+                                                                           MediaType.APPLICATION_OCTET_STREAM),
+                                                                   testFilePath.toUri().toURL(),
+                                                                   "localStorage",
+                                                                   Optional.empty(),
+                                                                   "group");
+        Path zipPath = plugin.getStorageLocationForZip(storageRequest);
+        Set<FileDeletionRequest> files = Sets.newHashSet();
+        FileReference fileRef = new FileReference("owner",
+                                                  new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
+                                                                            "MD5",
+                                                                            "file.name",
+                                                                            null,
+                                                                            MediaType.APPLICATION_OCTET_STREAM),
+                                                  new FileLocation("local-storage",
+                                                                   zipPath.toUri().toURL().toString()));
+        fileRef.setId(1L);
+        FileDeletionRequest deletionRequest = new FileDeletionRequest(fileRef, "groupId");
+        files.add(deletionRequest);
+        FileDeletionWorkingSubset ws = new FileDeletionWorkingSubset(files);
+        Assert.assertTrue("", Files.exists(zipPath));
+
+        Mockito.verify(deletionProgress, Mockito.never()).deletionSucceed(Mockito.eq(deletionRequest));
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
+        plugin.delete(ws, deletionProgress);
+        Mockito.verify(deletionProgress, Mockito.times(1)).deletionSucceed(deletionRequest);
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
+        Assert.assertTrue("ZIP archive should still be there", Files.notExists(zipPath));
+    }
+
+    @Test
+    public void deleteFromZipAndNotZip() throws IOException {
+        //store first file
+        store();
+        // store second file
+        Set<FileStorageRequest> files = Sets.newHashSet();
+        Path testFilePath = Paths.get("src", "test", "resources", "file2.test");
+        FileStorageRequest storageRequest = new FileStorageRequest("owner",
+                                                                   new FileReferenceMetaInfo(
+                                                                           "b4b2c823e4a4cf98d755f76679c83918",
+                                                                           "MD5",
+                                                                           "file2.name",
+                                                                           testFilePath.toFile().length(),
+                                                                           MediaType.APPLICATION_OCTET_STREAM),
+                                                                   testFilePath.toUri().toURL(),
+                                                                   "localStorage",
+                                                                   Optional.empty(),
+                                                                   "group");
+
+        files.add(storageRequest);
+        FileStorageWorkingSubset ws = new FileStorageWorkingSubset(files);
+        plugin.store(ws, storageProgress);
+
+        // delete first file
+        testFilePath = Paths.get("src", "test", "resources", "file.test");
+        storageRequest = new FileStorageRequest("owner",
+                                                                   new FileReferenceMetaInfo(
+                                                                           "edc900745c5d15d773fbcdc0b376f00c",
+                                                                           "MD5",
+                                                                           "file.name",
+                                                                           testFilePath.toFile().length(),
+                                                                           MediaType.APPLICATION_OCTET_STREAM),
+                                                                   testFilePath.toUri().toURL(),
+                                                                   "localStorage",
+                                                                   Optional.empty(),
+                                                                   "group");
+        Path zipPath = plugin.getStorageLocationForZip(storageRequest);
+        Set<FileDeletionRequest> fileDeletionRequests = Sets.newHashSet();
+        FileReference fileRef = new FileReference("owner",
+                                                  new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
+                                                                            "MD5",
+                                                                            "file.name",
+                                                                            null,
+                                                                            MediaType.APPLICATION_OCTET_STREAM),
+                                                  new FileLocation("local-storage",
+                                                                   zipPath.toUri().toURL().toString()));
+        fileRef.setId(1L);
+        FileDeletionRequest deletionRequest = new FileDeletionRequest(fileRef, "groupId");
+        fileDeletionRequests.add(deletionRequest);
+        FileDeletionWorkingSubset fileDeletionWorkingSubset = new FileDeletionWorkingSubset(fileDeletionRequests);
+        Assert.assertTrue("", Files.exists(zipPath));
+
+        Mockito.verify(deletionProgress, Mockito.never()).deletionSucceed(Mockito.eq(deletionRequest));
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
+        plugin.delete(fileDeletionWorkingSubset, deletionProgress);
+        Mockito.verify(deletionProgress, Mockito.times(1)).deletionSucceed(deletionRequest);
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
+        Assert.assertTrue("ZIP archive should still be there", Files.exists(zipPath));
+    }
+
+    @Test
     public void delete() throws IOException {
         URL urlToDelete = new URL("file", null, "target/local-storage/test/huhu/fileToDelete.test");
         Set<FileDeletionRequest> files = Sets.newHashSet();
-        FileReference fileRef = new FileReference("owner", new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
-                "MD5", "file.name", null, MediaType.APPLICATION_OCTET_STREAM),
-                new FileLocation("local-storage", urlToDelete.toString()));
+        FileReference fileRef = new FileReference("owner",
+                                                  new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
+                                                                            "MD5",
+                                                                            "file.name",
+                                                                            null,
+                                                                            MediaType.APPLICATION_OCTET_STREAM),
+                                                  new FileLocation("local-storage", urlToDelete.toString()));
         fileRef.setId(1L);
         FileDeletionRequest deletionRequest = new FileDeletionRequest(fileRef, "groupId");
         files.add(deletionRequest);
@@ -166,21 +311,25 @@ public class LocalDataStorageTest {
         Assert.assertTrue("", Files.exists(Paths.get(urlToDelete.getPath())));
 
         Mockito.verify(deletionProgress, Mockito.never()).deletionSucceed(Mockito.eq(deletionRequest));
-        Mockito.verify(deletionProgress, Mockito.never()).deletionFailed(Mockito.eq(deletionRequest),
-                                                                         Mockito.anyString());
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
         plugin.delete(ws, deletionProgress);
         Mockito.verify(deletionProgress, Mockito.times(1)).deletionSucceed(deletionRequest);
-        Mockito.verify(deletionProgress, Mockito.never()).deletionFailed(Mockito.eq(deletionRequest),
-                                                                         Mockito.anyString());
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
     }
 
     @Test
     public void delete_missing_file() throws IOException {
         URL urlToDelete = new URL("file", null, "target/local-storage/test/fileToDelete.test");
         Set<FileDeletionRequest> files = Sets.newHashSet();
-        FileReference fileRef = new FileReference("owner", new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
-                "MD5", "file.name", null, MediaType.APPLICATION_OCTET_STREAM),
-                new FileLocation("local-storage", urlToDelete.toString()));
+        FileReference fileRef = new FileReference("owner",
+                                                  new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
+                                                                            "MD5",
+                                                                            "file.name",
+                                                                            null,
+                                                                            MediaType.APPLICATION_OCTET_STREAM),
+                                                  new FileLocation("local-storage", urlToDelete.toString()));
         fileRef.setId(1L);
         FileDeletionRequest deletionRequest = new FileDeletionRequest(fileRef, "groupId");
         files.add(deletionRequest);
@@ -189,21 +338,27 @@ public class LocalDataStorageTest {
         Assert.assertFalse("", Files.exists(Paths.get(urlToDelete.getPath())));
 
         Mockito.verify(deletionProgress, Mockito.never()).deletionSucceed(Mockito.eq(deletionRequest));
-        Mockito.verify(deletionProgress, Mockito.never()).deletionFailed(Mockito.eq(deletionRequest),
-                                                                         Mockito.anyString());
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
         plugin.delete(ws, deletionProgress);
         Mockito.verify(deletionProgress, Mockito.times(1)).deletionSucceed(deletionRequest);
-        Mockito.verify(deletionProgress, Mockito.never()).deletionFailed(Mockito.eq(deletionRequest),
-                                                                         Mockito.anyString());
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
+        //To avoid issues with @After and still have a nice context on other tests, lets create a the base storage directory
+        Files.createDirectories(Paths.get(baseStorageLocation));
     }
 
     @Test
     public void delete_error() throws IOException {
         URL urlToDelete = new URL("file", null, "target/local-storage/test/fileToDelete.test");
         Set<FileDeletionRequest> files = Sets.newHashSet();
-        FileReference fileRef = new FileReference("owner", new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
-                "MD5", "file.name", null, MediaType.APPLICATION_OCTET_STREAM),
-                new FileLocation("local-storage", urlToDelete.toString()));
+        FileReference fileRef = new FileReference("owner",
+                                                  new FileReferenceMetaInfo("edc900745c5d15d773fbcdc0b376f00c",
+                                                                            "MD5",
+                                                                            "file.name",
+                                                                            null,
+                                                                            MediaType.APPLICATION_OCTET_STREAM),
+                                                  new FileLocation("local-storage", urlToDelete.toString()));
         fileRef.setId(1L);
         FileDeletionRequest deletionRequest = new FileDeletionRequest(fileRef, "groupId");
         files.add(deletionRequest);
@@ -216,12 +371,12 @@ public class LocalDataStorageTest {
         Assert.assertFalse("", Files.isWritable(Paths.get(urlToDelete.getPath()).getParent()));
 
         Mockito.verify(deletionProgress, Mockito.never()).deletionSucceed(Mockito.eq(deletionRequest));
-        Mockito.verify(deletionProgress, Mockito.never()).deletionFailed(Mockito.eq(deletionRequest),
-                                                                         Mockito.anyString());
+        Mockito.verify(deletionProgress, Mockito.never())
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
         plugin.delete(ws, deletionProgress);
         Mockito.verify(deletionProgress, Mockito.never()).deletionSucceed(deletionRequest);
-        Mockito.verify(deletionProgress, Mockito.times(1)).deletionFailed(Mockito.eq(deletionRequest),
-                                                                          Mockito.anyString());
+        Mockito.verify(deletionProgress, Mockito.times(1))
+                .deletionFailed(Mockito.eq(deletionRequest), Mockito.anyString());
     }
 
 }
